<resources>
    <string name="app_name">MarianaL_3175MT</string>
    <string name="txtTitle">Mariana Magalhaes Lima - 300330330 - 3175 MT</string>
    <string name="txtCustomerName">Customer Name</string>
    <string name="promptDestination">Choose your destination</string>
    <string name="radioBtnSingle">Single Day Package</string>
    <string name="RadioBtnThree">Three Day Package</string>
    <string name="radioBtnSeven">Seven Day Package</string>
    <string name="btnNext">Next</string>
    <string name="hintNumberofPeople">Number of People</string>
    <string-array name="destinations">
        <item>Hawaii</item>
        <item>Cancun</item>
        <item>Vienna</item>
    </string-array>
</resources>